--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "csv-parser": "^2.3.3",
     "csv-writer": "^1.6.0",
     "electron": "^10.1.0"
+  },
+  "devDependencies": {
+    "electron-packager": "^15.1.0"
   }
 }
