--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A log book to record flight time",
   "main": "main.js",
   "scripts": {
-    "start": "electron ."
+    "start": "electron .",
+    "package-win": "electron-packager . flight-logbook --overwrite --asar --platform=win32 --arch=ia32 --icon=icons/win/icon.ico --prune=true --out=release-builds --version-string.CompanyName=JS --version-string.FileDescription=FlightLogBook --version-string.ProductName=\"Flight-LogBook\""
   },
   "author": "James Stallworthy",
   "license": "MIT",
